--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
             wget https://raw.githubusercontent.com/rmFlynn/16s_to_bins_project/main/environment.yaml
             conda env create -f environment.yaml -n join_asvbins
             source activate join_asvbins
-            pytest
+            pytest tests/
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
