fix missing key

--- a/join_asvbins/Snakefile
+++ b/join_asvbins/Snakefile
@@ -17,7 +17,7 @@ bins_path = config.get('bins')
 candidate_asv_seqs = config.get('candidate_asv_seqs')
 asv_seqs_path = config.get('asv_seqs')
 fasta_extention = config.get('fasta_extention')
-generic_16s_path = config.get('generic_16s')
+generic_16s_path = config.get('generic_16S')
 allow_empty= config.get('allow_empty')
 qiime_out= config.get('qiime_out')
 s1_mmseqs_sensitivity = config.get('s1_mmseqs_sensitivity')
