--- a/environment.yaml
+++ b/environment.yaml
@@ -10,7 +10,7 @@ dependencies:
   - mmseqs2!=10.6d92c
   - barrnap
   - blast
-  - samtools
+  - samtools==1.11
   - snakemake-minimal
   - pip:
     - join_asvbins
